--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       span {
           padding: 0px 5px 0px 0px;
       }
+      @media screen and (max-width:769px) {
+          body {
+              font-size: 24px;
+          }
+      }
     </style>
     <script>
       var shuffle = function(array){
